Fix image position on mobile
Moves media CSS to the container from the canvas to correct positioning

--- a/scripts/css.css
+++ b/scripts/css.css
@@ -116,10 +116,10 @@
 }
 
 
-#imageCanvas{
+#imageContainer{
     position: absolute;
     top: 58%;
-    max-height: 75%;
+    height: 75%;
 }
 
 #continueButtonExif{
